--- a/app/views/decks/index.html.erb
+++ b/app/views/decks/index.html.erb
@@ -13,7 +13,7 @@
 
     <div class="col">
 
-      <%= render "components/deck_card", deck: deck, deck_flashcards_count: deck_flashcards_count %>
+      <%= render "components/deck_card", deck: deck, user_deck_ids: @user_deck_ids, deck_flashcards_count: deck_flashcards_count %>
 
     </div>
 
