--- a/app/views/user_decks/learn.html.erb
+++ b/app/views/user_decks/learn.html.erb
@@ -23,7 +23,7 @@
 <% if @user_deck_flashcards.any? %>
 <%# <% if [ @user_deck_flashcards.each { |flashcard| [:learnt] == false } ].any? %>
 
-  <%= render "components/flashcard", top_flashcard: @top_flashcard %>
+  <%= render "components/flashcard", top_flashcard: @top_flashcard, top_user_flashcard: @top_user_flashcard %>
 
   <%# <button>Incorrect</button>
   <%# Edit current user_flashcard with new due review and redirect back to this view %>
