--- a/app/views/components/_delete_user_deck_modal.html.erb
+++ b/app/views/components/_delete_user_deck_modal.html.erb
@@ -1,5 +1,5 @@
 <!-- Modal -->
-<div class="modal fade" id="ConfirmDeleteDeckModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="ConfirmDeleteDeckModal<%= user_deck.id %>" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
