--- a/app/views/components/_user_deck_card.html.erb
+++ b/app/views/components/_user_deck_card.html.erb
@@ -42,7 +42,7 @@
                 <li><hr class="dropdown-divider"></li>
                 <!-- Button trigger confirm delete deck modal -->
                 <li>
-                  <div data-bs-toggle="modal" data-bs-target="#ConfirmDeleteDeckModal" class="dropdown-item text-danger">
+                  <div data-bs-toggle="modal" data-bs-target="#ConfirmDeleteDeckModal<%= user_deck.id %>" class="dropdown-item text-danger">
                     <i class="fa-solid fa-trash-can user_deck_card_delete_icon text-secondary"></i>
                     Delete deck
                   </div>
@@ -52,69 +52,82 @@
 
           </li>
 
-          <li class="list-group-item">
+          <li class="list-group-item d-flex flex-column">
 
-            Deck progress:
-            <%# <%= user_deck_flashcards_learnt_count / user_deck_flashcards_count * 100 %>
-            <%# <%= (user_deck_flashcards_learnt_count / user_deck_flashcards_count) * 100  %>
-            <% if user_deck_flashcards_learnt_count > 0 && user_deck_flashcards_count > 0 %>
-              <% deck_progress_percentage = user_deck_flashcards_learnt_count.to_f / user_deck_flashcards_count.to_f * 100 %>
-            <% else %>
-              <% deck_progress_percentage = 0 %>
-            <% end %>
-            <div class="progress">
-              <%# <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="<%= user_deck_flashcards_learnt_count" aria-valuemin="0" aria-valuemax="<%= user_deck_flashcards_count"></div> %>
-              <% if deck_progress_percentage == 100 %>
-                <div class="progress-bar bg-success" role="progressbar" style="width: <%= "#{deck_progress_percentage}%" %>" aria-valuenow= "<%= user_deck_flashcards_learnt_count %>" aria-valuemin="0" aria-valuemax="<%= user_deck_flashcards_count %>"></div>
-              <% else %>
-                <div class="progress-bar bg-primary" role="progressbar" style="width: <%= "#{deck_progress_percentage}%" %>" aria-valuenow= "<%= user_deck_flashcards_learnt_count %>" aria-valuemin="0" aria-valuemax="<%= user_deck_flashcards_count %>"></div>
-              <% end %>
-            </div>
-            <%# <%= user_deck_flashcards_learnt_count / <%= user_deck_flashcards_count %>
-            <%# <br>
-            <%# Daily learn progress bar %>
+            <div class="mb-1">
+              Deck progress:
+              <%# <%= user_deck_flashcards_learnt_count / user_deck_flashcards_count * 100 %>
+              <%# <%= (user_deck_flashcards_learnt_count / user_deck_flashcards_count) * 100  %>
+              <%= user_deck_flashcards_learnt_count%> / <%= user_deck_flashcards_count %>
 
-            Daily learning goal:
-            <% learnt_today_count = @user_flashcards.where("user_deck_id = ? AND learnt <= ?", user_deck.id, Time.now).count %>
-            <% learnt_today_count = @user_flashcards.where("user_deck_id = ? AND learnt > ? AND learnt <= ?", user_deck.id, Time.now.to_date.midnight, Time.now).count %>
-            <%= learnt_today_count %>
-            <% to_learn_today_count = @user_flashcards.where("user_deck_id = ? AND learnt IS ? AND due_to_learn <= ?", user_deck.id, nil, Time.now).count %>
-            <%# <%= to_learn_today_count %>
-            <% total_learn_today_count = learnt_today_count + to_learn_today_count %> / <%= total_learn_today_count %>
-            <% if learnt_today_count > 0 && total_learn_today_count > 0 %>
-              <% today_learn_progress_percentage = learnt_today_count.to_f / total_learn_today_count.to_f * 100 %>
-            <% else %>
-              <% today_learn_progress_percentage = 0 %>
-            <% end %>
-            <div class="progress">
-              <% if today_learn_progress_percentage == 100 %>
-                <div class="progress-bar bg-success" role="progressbar" style="width: <%= "#{today_learn_progress_percentage}%" %>" aria-valuenow="6" aria-valuemin="0" aria-valuemax="10"></div>
+              <% if user_deck_flashcards_learnt_count > 0 && user_deck_flashcards_count > 0 %>
+                <% deck_progress_percentage = user_deck_flashcards_learnt_count.to_f / user_deck_flashcards_count.to_f * 100 %>
               <% else %>
-                <div class="progress-bar bg-warning" role="progressbar" style="width: <%= "#{today_learn_progress_percentage}%" %>" aria-valuenow="6" aria-valuemin="0" aria-valuemax="10" data-bs-toggle="popover" data-bs-trigger="focus" title="Dismissible popover" data-bs-content="And here's some amazing content. It's very engaging. Right?"></div>
+                <% deck_progress_percentage = 0 %>
               <% end %>
-            </div>
-            <%# <div class="progress">
-              <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="6" aria-valuemin="0" aria-valuemax="10"></div>
+              <div class="progress">
+                <%# <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="<%= user_deck_flashcards_learnt_count" aria-valuemin="0" aria-valuemax="<%= user_deck_flashcards_count"></div> %>
+                <% if deck_progress_percentage == 100 %>
+                  <div class="progress-bar bg-success" role="progressbar" style="width: <%= "#{deck_progress_percentage}%" %>" aria-valuenow= "<%= user_deck_flashcards_learnt_count %>" aria-valuemin="0" aria-valuemax="<%= user_deck_flashcards_count %>"></div>
+                <% else %>
+                  <div class="progress-bar bg-primary mb-3" role="progressbar" style="width: <%= "#{deck_progress_percentage}%" %>" aria-valuenow= "<%= user_deck_flashcards_learnt_count %>" aria-valuemin="0" aria-valuemax="<%= user_deck_flashcards_count %>"></div>
+                <% end %>
+              </div>
+              <%# <%= user_deck_flashcards_learnt_count / <%= user_deck_flashcards_count %>
+              <%# <br>
+              <%# Daily learn progress bar %>
             </div>
 
-            <%# Daily review progress bar %>
-            Daily review goal:
-            <% reviewed_today_count = @user_flashcards.where("user_deck_id = ? AND previous_review <= ?", user_deck.id, DateTime.now.utc.end_of_day).count %>
-            <%# <%= reviewed_today_count %>
-            <% to_review_today_count = @user_flashcards.where("user_deck_id = ? AND next_review <= ?", user_deck.id, DateTime.now.utc.end_of_day).count %>
-            <%# <%= to_review_today_count %>
-            <% total_review_today_count = reviewed_today_count + to_review_today_count %>
-            <% if reviewed_today_count > 0 && total_review_today_count > 0 %>
-              <% today_review_progress_percentage = reviewed_today_count.to_f / total_review_today_count.to_f * 100 %>
-            <% else %>
-              <% today_review_progress_percentage = 0 %>
-            <% end %>
-            <div class="progress">
-              <% if today_review_progress_percentage == 100 %>
-                <div class="progress-bar bg-success" role="progressbar" style="width: <%= "#{today_review_progress_percentage}%" %>" aria-valuenow="6" aria-valuemin="0" aria-valuemax="10"></div>
+            <div class="mb-1">
+              Daily learning goal:
+              <% learnt_today_count = @user_flashcards.where("user_deck_id = ? AND learnt <= ?", user_deck.id, Time.now).count %>
+              <% learnt_today_count = @user_flashcards.where("user_deck_id = ? AND learnt > ? AND learnt <= ?", user_deck.id, Time.now.to_date.midnight, Time.now).count %>
+              <%= learnt_today_count %>
+              <% to_learn_today_count = @user_flashcards.where("user_deck_id = ? AND learnt IS ? AND due_to_learn <= ?", user_deck.id, nil, Time.now).count %>
+              <%# <%= to_learn_today_count %>
+              <% total_learn_today_count = learnt_today_count + to_learn_today_count %> / <%= total_learn_today_count %>
+              <% if learnt_today_count > 0 && total_learn_today_count > 0 %>
+                <% today_learn_progress_percentage = learnt_today_count.to_f / total_learn_today_count.to_f * 100 %>
               <% else %>
-                <div class="progress-bar bg-danger" role="progressbar" style="width: <%= "#{today_review_progress_percentage}%" %>" aria-valuenow="6" aria-valuemin="0" aria-valuemax="10"></div>
+                <% today_learn_progress_percentage = 0 %>
               <% end %>
+              <div class="progress">
+                <% if today_learn_progress_percentage == 100 %>
+                  <div class="progress-bar bg-success" role="progressbar" style="width: <%= "#{today_learn_progress_percentage}%" %>" aria-valuenow="6" aria-valuemin="0" aria-valuemax="10"></div>
+                <% else %>
+                  <div class="progress-bar bg-warning" role="progressbar" style="width: <%= "#{today_learn_progress_percentage}%" %>" aria-valuenow="6" aria-valuemin="0" aria-valuemax="10" data-bs-toggle="popover" data-bs-trigger="focus" title="Dismissible popover" data-bs-content="And here's some amazing content. It's very engaging. Right?"></div>
+                <% end %>
+              </div>
+              <%# <div class="progress">
+                <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="6" aria-valuemin="0" aria-valuemax="10"></div>
+              </div>
+              %>
+            </div>
+
+            <div class="mb-1">
+              <%# Daily review progress bar %>
+              Daily review goal:
+
+              <% reviewed_today_count = @user_flashcards.where("user_deck_id = ? AND previous_review <= ?", user_deck.id, DateTime.now.utc.end_of_day).count %>
+              <%# <%= reviewed_today_count %>
+              <% to_review_today_count = @user_flashcards.where("user_deck_id = ? AND next_review <= ?", user_deck.id, DateTime.now.utc.end_of_day).count %>
+              <%# <%= to_review_today_count %>
+              <% total_review_today_count = reviewed_today_count + to_review_today_count %>
+
+              <%= reviewed_today_count %> / <%= total_review_today_count %>
+
+              <% if reviewed_today_count > 0 && total_review_today_count > 0 %>
+                <% today_review_progress_percentage = reviewed_today_count.to_f / total_review_today_count.to_f * 100 %>
+              <% else %>
+                <% today_review_progress_percentage = 0 %>
+              <% end %>
+              <div class="progress">
+                <% if today_review_progress_percentage == 100 %>
+                  <div class="progress-bar bg-success" role="progressbar" style="width: <%= "#{today_review_progress_percentage}%" %>" aria-valuenow="6" aria-valuemin="0" aria-valuemax="10"></div>
+                <% else %>
+                  <div class="progress-bar bg-danger" role="progressbar" style="width: <%= "#{today_review_progress_percentage}%" %>" aria-valuenow="6" aria-valuemin="0" aria-valuemax="10"></div>
+                <% end %>
+              </div>
             </div>
 
           </li>
