--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,17 +16,12 @@
 
     <!-- Custom CSS -->
     <%# link href="app/assets/stylesheets/custom.css" rel="stylesheet"> %>
-    <link rel="stylesheet" type="text/css" href="app/assets/stylesheets/custom.scss">
-
+    <%# <link rel="stylesheet" type="text/css" href="app/assets/stylesheets/custom.scss"> %>
 
     <title>Language Learning App</title>
   </head>
 
   <body>
-
-    <!-- Optional JavaScript; choose one of the two! -->
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
     <%= render "layouts/navbar" %>
     <div id="wrap">
@@ -51,7 +46,7 @@
       </div>
 
       <div id="background-svg">
-        <%= show_svg('undraw_road_to_knowledge_.svg') %>
+        <%#= show_svg('undraw_road_to_knowledge_.svg') %>
       </div>
 
       <div id="main" class="container d-flex flex-column" style="max-width:800px;">
@@ -60,6 +55,10 @@
       </div>
     </div>
     <%= render "layouts/footer" %>
+
+    <!-- Optional JavaScript; choose one of the two! -->
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
   </body>
 </html>
