--- a/app/views/user_decks/learn.html.erb
+++ b/app/views/user_decks/learn.html.erb
@@ -23,6 +23,8 @@
 <% if @user_deck_flashcards.any? %>
 <%# <% if [ @user_deck_flashcards.each { |flashcard| [:learnt] == false } ].any? %>
 
+  <h3 class="text-center m-3"><%= content_tag :span, @user_deck_flashcards.count, class: 'badge bg-warning' %> to learn</h3>
+
   <%= render "components/flashcard", top_flashcard: @top_flashcard, top_user_flashcard: @top_user_flashcard %>
 
   <%# <button>Incorrect</button>
