--- a/app/views/components/_user_deck_card.html.erb
+++ b/app/views/components/_user_deck_card.html.erb
@@ -5,6 +5,7 @@
 <% user_deck_flashcards_learnt_count = @user_flashcards.where("user_deck_id = ? AND learnt IS NOT ?", user_deck.id, nil).count %>
 <% user_deck_flashcards_to_review_count = @user_flashcards.where("user_deck_id = ? AND learnt IS NOT ? AND next_review < ?", user_deck.id, nil, Time.now).count %>
 
+<%= render 'components/get_learning_schedule_modal', user_deck: user_deck %>
 
 <%= render 'components/delete_user_deck_modal', user_deck: user_deck %>
 
@@ -38,7 +39,10 @@
               </button>
               <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenu2">
                 <li><%= link_to "Show / View cards", user_deck_path(user_deck.id), method: :get, class: "dropdown-item" %></li>
-                <li><%= link_to "Change learning schedule", get_learning_schedule_path(user_deck.id), method: :get, class: "dropdown-item" %></li>
+                <%# <li><%= link_to "Change learning schedule", get_learning_schedule_path(user_deck.id), method: :get, class: "dropdown-item" %> <%# </li> %>
+                <div data-bs-toggle="modal" data-bs-target="#GetLearningScheduleModal<%= user_deck.id %>" class="dropdown-item">
+                  Change learning schedule
+                </div>
                 <li><hr class="dropdown-divider"></li>
                 <!-- Button trigger confirm delete deck modal -->
                 <li>
