--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
     <div id="wrap">
       <%# This div displays flash notices and alerts etc. %>
       <% flash.each do |type, msg| %>
-        <%= type %>
+        <%#= type %>
         <div id="alert-bottom-right" class="alert alert-success alert-dismissible fade show" role="alert">
           <strong><%= msg %></strong>
           <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
@@ -49,7 +49,7 @@
         <%#= show_svg('undraw_road_to_knowledge_.svg') %>
       </div>
 
-      <div id="main" class="container d-flex flex-column" style="max-width:800px;">
+      <div id="main" class="container d-flex flex-column">
       <%# <div> %>
         <%= yield %>
       </div>
