--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -47,6 +47,7 @@ html, body {
 
 .card {
   // background-color: #41EAD4 !important;
+  border-radius: 0 !important;
 }
 
 .btn-primary {
@@ -82,10 +83,24 @@ nav .navbar-nav li a, .navbar-brand {
   // z-index: 100;
   // height: 70px;
   // box-shadow: 0 4px 4px -4px rgba(0,0,0,.2);
-  //background: #0A122A;
-  background: #3454D1;
+  // background: #0A122A;
+
+  // background: #3454D1;
+  background: rgba(52, 84, 209, 0);
+
   // color: $gray;
   // font-size: 30px;
+  transition: background-color 200ms linear;
+}
+
+.navbar-text {
+  color:rgba(52, 84, 209, 1)
+}
+
+.navbar.scrolled {
+  background: rgba(52, 84, 209, 1);
+  // background-color: #fff !important;
+  transition: background-color 200ms linear;
 }
 
 .navbar-brand {
@@ -94,6 +109,7 @@ nav .navbar-nav li a, .navbar-brand {
 }
 
 footer {
-  background: #3454D1;
+  // background: #3454D1;
+  background: rgba(52, 84, 209, 1);
   color: white;
 }
