--- a/app/views/components/_get_learning_schedule_modal.html.erb
+++ b/app/views/components/_get_learning_schedule_modal.html.erb
@@ -5,19 +5,37 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Update learning schedule</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Change learning schedule</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
+        <p class="card-text">
+          Current learning schedule: <%= current_user_deck_flashcards_per_day %> per day
+        </p>
+        <p class="card-text">
+          <% if current_user_deck_flashcards_per_day > 0 %>
+            Time to complete deck: <%= user_deck_flashcards.count / current_user_deck_flashcards_per_day %> days
+          <% end %>
+        </p>
 
-        <%= form_with url: update_learning_schedule_path(user_deck.id) do |form| %>
+        <%#= form_with url: update_learning_schedule_path, method: :post do |form| %>
+        <%= form_for user_deck, url: { action: :update_learning_schedule }, method: :post do |form| %>
+
+          <%# Which of these hidden fields is working? %>
+          <%= hidden_field_tag 'id', user_deck.id %>
+          <%= form.hidden_field :id, value: user_deck.id %>
+
           <%= form.label :to_learn_per_day, "New cards to learn per day:" %>
           <%= form.number_field :to_learn_per_day, in: 1..100, step: 1 %>
-          <%= form.submit "Update" %>
+          <%= form.submit "Update", class: "btn btn-primary" %>
+          </div>
+          <%#
+          <div class="modal-footer">
+          </div>
+          %>
         <% end %>
 
         <%# Are you sure you want to delete this deck? This action cannot be undone. %>
-      </div>
       <%# <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
         <%# <button type="button" class="btn btn-danger">Delete</button> %>
