--- a/app/views/components/_user_deck_card.html.erb
+++ b/app/views/components/_user_deck_card.html.erb
@@ -1,15 +1,18 @@
 <%# <div class="card mb-3" style="max-width: 540px;"> %>
 
 <% deck = @decks.find(user_deck.deck_id) %>
-<% user_deck_flashcards_count = @user_flashcards.where(user_deck_id: user_deck.id).count %>
+<% user_deck_flashcards = @user_flashcards.where(user_deck_id: user_deck.id) %>
+<% user_deck_flashcards_count = user_deck_flashcards.count %>
+<% current_user_deck_flashcards_per_day = user_deck_flashcards.where("due_to_learn > ? AND due_to_learn < ?", DateTime.now.utc.beginning_of_day, DateTime.now.utc.end_of_day).count %>
 <% user_deck_flashcards_learnt_count = @user_flashcards.where("user_deck_id = ? AND learnt IS NOT ?", user_deck.id, nil).count %>
 <% user_deck_flashcards_to_review_count = @user_flashcards.where("user_deck_id = ? AND learnt IS NOT ? AND next_review < ?", user_deck.id, nil, Time.now).count %>
 
-<%= render 'components/get_learning_schedule_modal', user_deck: user_deck %>
+<%= render 'components/get_learning_schedule_modal', user_deck: user_deck, user_deck_flashcards: user_deck_flashcards, current_user_deck_flashcards_per_day: current_user_deck_flashcards_per_day %>
 
 <%= render 'components/delete_user_deck_modal', user_deck: user_deck %>
 
-<div class="card shadow m-3 user_deck_card">
+<%# <div class="card shadow m-3 user_deck_card"> %>
+<div class="card m-3 user_deck_card">
   <div class="row g-0">
     <div class="col-md-4 d-none d-md-block"> <%# d-none d-md-block hides this div on screen sizes smaller than md %>
       <%# <img src="images/<%= deck.name.downcase %><%#.jpg" class="img-fluid rounded-start" alt="..."> %>
@@ -38,7 +41,7 @@
                 Options
               </button>
               <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenu2">
-                <li><%= link_to "Show / View cards", user_deck_path(user_deck.id), method: :get, class: "dropdown-item" %></li>
+                <li><%= link_to "Show / View cards", user_deck_path(user_deck.id, section: 0), method: :get, class: "dropdown-item" %></li>
                 <%# <li><%= link_to "Change learning schedule", get_learning_schedule_path(user_deck.id), method: :get, class: "dropdown-item" %> <%# </li> %>
                 <div data-bs-toggle="modal" data-bs-target="#GetLearningScheduleModal<%= user_deck.id %>" class="dropdown-item">
                   Change learning schedule
