--- a/app/views/user_decks/review.html.erb
+++ b/app/views/user_decks/review.html.erb
@@ -1,7 +1,7 @@
 
 <%# <% if @user_deck_flashcards.any? %>
 <%# SHOW THE CARD WITH THE EARLIEST 'NEXT REVIEW' FIRST: %>
-<h3 class="text-center m-3"><%= content_tag :span, @user_deck_flashcards.count, class: 'badge bg-danger' %> to review</h3>
+<h3 class="text-center m-3"><%= content_tag :span, @user_deck_flashcards.count, class: 'badge bg-danger' %></h3>
 
 <%= render "components/flashcard", top_flashcard: @top_flashcard, top_user_flashcard: @top_user_flashcard %>
 
