frontend navbar etc., and unignore unselected cards in #ignore action

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,7 +27,7 @@
 // Alerts
 @import "components/alert";
 
-// Custom CSS:
+// Custom CSS to customise Bootstrap:
 @import "custom";
 
 html, body {
