--- a/app/views/components/_user_deck_card.html.erb
+++ b/app/views/components/_user_deck_card.html.erb
@@ -11,8 +11,8 @@
 
 <%= render 'components/delete_user_deck_modal', user_deck: user_deck %>
 
-<%# <div class="card shadow m-3 user_deck_card"> %>
-<div class="card m-3 user_deck_card">
+<div class="card shadow m-3 user_deck_card">
+<%# <div class="card m-3 user_deck_card"> %>
   <div class="row g-0">
     <div class="col-md-4 d-none d-md-block"> <%# d-none d-md-block hides this div on screen sizes smaller than md %>
       <%# <img src="images/<%= deck.name.downcase %><%#.jpg" class="img-fluid rounded-start" alt="..."> %>
@@ -89,10 +89,11 @@
               Daily learning goal:
               <% learnt_today_count = @user_flashcards.where("user_deck_id = ? AND learnt <= ?", user_deck.id, Time.now).count %>
               <% learnt_today_count = @user_flashcards.where("user_deck_id = ? AND learnt > ? AND learnt <= ?", user_deck.id, Time.now.to_date.midnight, Time.now).count %>
-              <%= learnt_today_count %>
+              <%#= learnt_today_count %>
               <% to_learn_today_count = @user_flashcards.where("user_deck_id = ? AND learnt IS ? AND due_to_learn <= ?", user_deck.id, nil, Time.now).count %>
               <%# <%= to_learn_today_count %>
-              <% total_learn_today_count = learnt_today_count + to_learn_today_count %> / <%= total_learn_today_count %>
+              <% total_learn_today_count = learnt_today_count + to_learn_today_count %>
+              <%# / <%= total_learn_today_count %>
               <% if learnt_today_count > 0 && total_learn_today_count > 0 %>
                 <% today_learn_progress_percentage = learnt_today_count.to_f / total_learn_today_count.to_f * 100 %>
               <% else %>
@@ -102,10 +103,10 @@
                 <% if today_learn_progress_percentage == 100 %>
                   <div class="progress-bar bg-success" role="progressbar" style="width: <%= "#{today_learn_progress_percentage}%" %>" aria-valuenow="6" aria-valuemin="0" aria-valuemax="10"></div>
                 <% else %>
-                  <div class="progress-bar bg-warning" role="progressbar" style="width: <%= "#{today_learn_progress_percentage}%" %>" aria-valuenow="6" aria-valuemin="0" aria-valuemax="10" data-bs-toggle="popover" data-bs-trigger="focus" title="Dismissible popover" data-bs-content="And here's some amazing content. It's very engaging. Right?"></div>
+                  <div class="progress-bar bg-warning" role="progressbar" style="width: <%= "#{today_learn_progress_percentage}%" %>" aria-valuenow="6" aria-valuemin="0" aria-valuemax="10" data-bs-toggle="popover" data-bs-trigger="focus" title="<%= learnt_today_count %> / <%= total_learn_today_count %>" data-bs-content="And here's some amazing content. It's very engaging. Right?"></div>
                 <% end %>
               </div>
-              <%# <div class="progress">
+              <%# <div class="progress"> /
                 <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="6" aria-valuemin="0" aria-valuemax="10"></div>
               </div>
               %>
