--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,9 +4,6 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
-
     <!-- ... -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,9 +11,16 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
+
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+
     <!-- Custom CSS -->
-    <%# link href="app/assets/stylesheets/custom.css" rel="stylesheet"> %>
+    <%# <link href="app/assets/stylesheets/custom.css" rel="stylesheet"> %>
+    <%# link rel="stylesheet" type="text/css" href="custom.css"> %>
+
     <%# <link rel="stylesheet" type="text/css" href="app/assets/stylesheets/custom.scss"> %>
+
+    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
 
     <title>Language Learning App</title>
   </head>
@@ -54,7 +58,7 @@
         <%= yield %>
       </div>
     </div>
-    <%= render "layouts/footer" %>
+    <%#= render "layouts/footer" %>
 
     <!-- Optional JavaScript; choose one of the two! -->
     <!-- Option 1: Bootstrap Bundle with Popper -->
