--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -79,7 +79,7 @@ html, body {
   bottom: 300px;
   right: 25px;
   z-index: -1;
-  opacity: 0.5;
+  // opacity: 0.5;
 }
 
 #background-circle-1 {
@@ -87,7 +87,7 @@ html, body {
   top: -300px;
   left: -250px;
   z-index: -1;
-  opacity: 0.5;
+  // opacity: 0.5;
 }
 
 #background-circle-2 {
@@ -95,7 +95,7 @@ html, body {
   bottom: 100px;
   right: -250px;
   z-index: -1;
-  opacity: 0.5;
+  // opacity: 0.5;
 }
 
 #main {
