--- a/app/views/components/_user_deck_card.html.erb
+++ b/app/views/components/_user_deck_card.html.erb
@@ -1,13 +1,20 @@
 <%# <div class="card mb-3" style="max-width: 540px;"> %>
 
 <% deck = @decks.find(user_deck.deck_id) %>
-<% user_deck_flashcards = @user_flashcards.where(user_deck_id: user_deck.id) %>
+<% user_deck_flashcards = user_flashcards.where(user_deck_id: user_deck.id) %>
 <% user_deck_flashcards_count = user_deck_flashcards.count %>
-<% current_user_deck_flashcards_per_day = user_deck_flashcards.where("due_to_learn > ? AND due_to_learn < ?", DateTime.now.utc.beginning_of_day, DateTime.now.utc.end_of_day).count %>
-<% user_deck_flashcards_learnt_count = @user_flashcards.where("user_deck_id = ? AND learnt IS NOT ?", user_deck.id, nil).count %>
-<% user_deck_flashcards_to_review_count = @user_flashcards.where("user_deck_id = ? AND learnt IS NOT ? AND next_review < ?", user_deck.id, nil, Time.now).count %>
+<% user_deck_flashcards_learnt_count = user_flashcards.where("user_deck_id = ? AND learnt IS NOT ? AND ignore = ?", user_deck.id, nil, false).count %>
 
-<%= render 'components/get_learning_schedule_modal', user_deck: user_deck, user_deck_flashcards: user_deck_flashcards, current_user_deck_flashcards_per_day: current_user_deck_flashcards_per_day %>
+<%# current_user_deck_flashcards_per_day = user_deck_flashcards.where("due_to_learn > ? AND due_to_learn < ?", DateTime.now.utc.beginning_of_day, DateTime.now.utc.end_of_day).count %>
+
+<% to_learn_today_count = user_flashcards.where("user_deck_id = ? AND learnt IS ? AND due_to_learn <= ? AND ignore = ?", user_deck.id, nil, DateTime.now.utc.end_of_day, false).count %>
+
+<% user_deck_flashcards_to_review_count = user_flashcards.where("user_deck_id = ? AND learnt IS NOT ? AND next_review < ? AND ignore = ?", user_deck.id, nil, DateTime.now.utc.end_of_day, false).count %>
+<% reviewed_today_count = user_flashcards.where("user_deck_id = ? AND previous_review > ? AND previous_review <= ? AND ignore = ?", user_deck.id, DateTime.now.utc.beginning_of_day, DateTime.now.utc.end_of_day, false).count %>
+<% to_review_today_count = user_flashcards.where("user_deck_id = ? AND next_review <= ? AND ignore = ?", user_deck.id, DateTime.now.utc.end_of_day, false).count %>
+<% total_review_today_count = reviewed_today_count + to_review_today_count %>
+
+<%= render 'components/get_learning_schedule_modal', user_deck: user_deck, user_deck_flashcards: user_deck_flashcards %>
 
 <%= render 'components/delete_user_deck_modal', user_deck: user_deck %>
 
@@ -16,7 +23,7 @@
   <div class="row g-0">
     <div class="col-md-4 d-none d-md-block"> <%# d-none d-md-block hides this div on screen sizes smaller than md %>
       <%# <img src="images/<%= deck.name.downcase %><%#.jpg" class="img-fluid rounded-start" alt="..."> %>
-      <%= image_tag "#{deck.name.downcase}.jpg", class: "card-img-top img-fluid rounded-start user_deck_card_img", style: "height: 322px;object-fit:cover;" %>
+      <%= image_tag "#{deck.name.downcase}.jpg", class: "card-img-top img-fluid rounded-start user_deck_card_img", style: "height: 333px;object-fit:cover;" %>
     </div>
     <div class="col-md-8">
       <div class="card-body">
@@ -87,25 +94,11 @@
 
             <div class="mb-1">
               Daily learning goal:
-              <% learnt_today_count = @user_flashcards.where("user_deck_id = ? AND learnt <= ?", user_deck.id, Time.now).count %>
-              <% learnt_today_count = @user_flashcards.where("user_deck_id = ? AND learnt > ? AND learnt <= ?", user_deck.id, Time.now.to_date.midnight, Time.now).count %>
+              <%# learnt_today_count = user_flashcards.where("user_deck_id = ? AND learnt <= ?", user_deck.id, Time.now).count %>
               <%#= learnt_today_count %>
-              <% to_learn_today_count = @user_flashcards.where("user_deck_id = ? AND learnt IS ? AND due_to_learn <= ?", user_deck.id, nil, Time.now).count %>
+              <%# to_learn_today_count = user_flashcards.where("user_deck_id = ? AND learnt IS ? AND due_to_learn <= ? AND ignore = ?", user_deck.id, nil, Time.now.to_date.midnight, false).count %>
               <%# <%= to_learn_today_count %>
-              <% total_learn_today_count = learnt_today_count + to_learn_today_count %>
-              <%# / <%= total_learn_today_count %>
-              <% if learnt_today_count > 0 && total_learn_today_count > 0 %>
-                <% today_learn_progress_percentage = learnt_today_count.to_f / total_learn_today_count.to_f * 100 %>
-              <% else %>
-                <% today_learn_progress_percentage = 0 %>
-              <% end %>
-              <div class="progress">
-                <% if today_learn_progress_percentage == 100 %>
-                  <div class="progress-bar bg-success" role="progressbar" style="width: <%= "#{today_learn_progress_percentage}%" %>" aria-valuenow="6" aria-valuemin="0" aria-valuemax="10"></div>
-                <% else %>
-                  <div class="progress-bar bg-warning" role="progressbar" style="width: <%= "#{today_learn_progress_percentage}%" %>" aria-valuenow="6" aria-valuemin="0" aria-valuemax="10" data-bs-toggle="popover" data-bs-trigger="focus" title="<%= learnt_today_count %> / <%= total_learn_today_count %>" data-bs-content="And here's some amazing content. It's very engaging. Right?"></div>
-                <% end %>
-              </div>
+              <%= render 'components/today_learn_progress_bar', user_deck: user_deck, user_flashcards: user_flashcards %>
               <%# <div class="progress"> /
                 <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="6" aria-valuemin="0" aria-valuemax="10"></div>
               </div>
@@ -115,12 +108,6 @@
             <div class="mb-1">
               <%# Daily review progress bar %>
               Daily review goal:
-
-              <% reviewed_today_count = @user_flashcards.where("user_deck_id = ? AND previous_review <= ?", user_deck.id, DateTime.now.utc.end_of_day).count %>
-              <%# <%= reviewed_today_count %>
-              <% to_review_today_count = @user_flashcards.where("user_deck_id = ? AND next_review <= ?", user_deck.id, DateTime.now.utc.end_of_day).count %>
-              <%# <%= to_review_today_count %>
-              <% total_review_today_count = reviewed_today_count + to_review_today_count %>
 
               <%= reviewed_today_count %> / <%= total_review_today_count %>
 
