--- a/app/views/user_decks/learn.html.erb
+++ b/app/views/user_decks/learn.html.erb
@@ -20,10 +20,12 @@
 
 <%# <% @user_deck_flashcards.each do |user_deck_flashcard| %>
 
-<% if @user_deck_flashcards.any? %>
+<% if @user_deck_flashcards_to_learn.any? %>
 <%# <% if [ @user_deck_flashcards.each { |flashcard| [:learnt] == false } ].any? %>
 
-  <h3 class="text-center m-3"><%= content_tag :span, @user_deck_flashcards.count, class: 'badge bg-warning' %></h3>
+  <%# <h3 class="text-center m-3"><%= content_tag :span, @user_deck_flashcards_to_learn.count, class: 'badge bg-warning' %> <%# </h3> %>
+
+  <%= render 'components/today_learn_progress_bar', user_deck: @user_deck, user_flashcards: @user_flashcards %>
 
   <%= render "components/flashcard", top_flashcard: @top_flashcard, top_user_flashcard: @top_user_flashcard %>
 
