--- a/app/views/user_decks/show.html.erb
+++ b/app/views/user_decks/show.html.erb
@@ -1,5 +1,5 @@
 
-<%= render "components/user_deck_card", user_deck: @user_deck, deck: @decks %>
+<%= render "components/user_deck_card", user_deck: @user_deck, deck: @decks, user_flashcards: @user_flashcards %>
 
 <%# <h2>Ordered by user_deck_flashcard.due_to_learn:</h2> %>
 
@@ -22,7 +22,7 @@
   <thead>
     <tr class="table-dark">
       <div class="collapse" id="ignore_card_collapse">
-        <th scope="col">Ignore?</th>
+        <th scope="col">Ignored?</th>
       </div>
       <th scope="col" class="d-none d-sm-table-cell">Frequency Rank</th>
       <th scope="col">Question</th>
@@ -33,7 +33,7 @@
   <% if @user_deck_flashcards.count > 0 %>
     <tbody>
         <div class="collapse" id="ignore_card_collapse">
-          <%= form_for @user_deck_flashcards, url: { action: :ignore, controller: "user_flashcards" }, method: :post do |form| %>
+          <%= form_for @user_deck_flashcards, url: { action: :ignore, controller: "user_decks" }, method: :post do |form| %>
             <%# Which of these hidden fields is working? %>
             <%= hidden_field_tag 'section', @section %>
             <%= form.hidden_field :section, value: @section %>
@@ -54,15 +54,19 @@
             <% if user_deck_flashcard.ignore %>
               <tr class="table-secondary">
             <% else %>
-              <% if user_deck_flashcard.next_review.nil? %>
-                <tr>
-            <% else %>
-                <% if user_deck_flashcard.learnt %>
+              <% if user_deck_flashcard.learnt %>
+                <% if user_deck_flashcard.next_review.nil? %>
+                  <tr>
+                <% else %>
                   <% if user_deck_flashcard.next_review.past? %>
                     <tr class="table-warning">
                   <% else %>
                     <tr class="table-success">
                   <% end %>
+                <% end %>
+              <% else %>
+                <% if user_deck_flashcard.due_to_learn.nil? %>
+                  <tr>
                 <% else %>
                   <% if user_deck_flashcard.due_to_learn.past? %>
                     <tr class="table-danger">
