--- a/app/views/components/_deck_card.html.erb
+++ b/app/views/components/_deck_card.html.erb
@@ -1,6 +1,6 @@
-<div class="card m-3 shadow bg-light text-white deck_card" style="">
-  <%= image_tag "#{deck.name.downcase}.jpg", class: "card-img img-fluid rounded deck_card_img", style: "height:322px;object-fit:cover;filter:brightness(80%);" %>
-  <div class="card-img-overlay">
+<div class="card m-3 shadow bg-light deck_card" style="">
+  <%= image_tag "#{deck.name.downcase}.jpg", class: "card-img img-fluid rounded deck_card_img", style: "height:200px;object-fit:cover;" %>
+  <div class="card-body">
     <h3 class="card-title"><%= deck.name %></h3>
     <% if deck_flashcards_count == 1 %>
       <p class="card-text"><%= deck_flashcards_count %> card</p>
@@ -8,10 +8,10 @@
       <p class="card-text"><%= deck_flashcards_count %> cards</p>
     <% end %>
     <p class="card-text">Last updated 3 mins ago</p>
-    <%= link_to "View", deck_path(deck.id), method: :get, class: 'btn btn-primary' %>
+    <%= link_to "View", deck_path(deck.id), method: :get, class: 'btn btn-lg btn-primary' %>
     <% if user_signed_in? %>
       <% unless user_deck_ids.include? deck.id %>
-        <%= link_to "Add", user_decks_path(deck_id: deck.id), method: :post, class: 'btn btn-success' %>
+        <%= link_to "Add", user_decks_path(deck_id: deck.id), method: :post, class: 'btn btn-lg btn-success' %>
       <% end %>
     <% end %>
   </div>
